syntax = "proto3";

package login;

option go_package = "proto/login";

// 消息类型枚举
enum MsgType {
  MSG_TYPE_UNKNOWN = 0;
  LOGIN_REQ = 2001;
  LOGIN_RSP = 2002;
  LOGOUT_REQ = 2003;
  LOGOUT_RSP = 2004;
}

// 登录请求
message LoginRequest {
  string username = 1;
  string password = 2;
}

// 登录响应
message LoginResponse {
  bool success = 1;
  string token = 2;
  string error_message = 3;
}

// 登出请求
message LogoutRequest {
  string token = 1;
}

// 登出响应
message LogoutResponse {
  bool success = 1;
  string error_message = 2;
}